@@ -19,8 +19,7 @@
  *
  */
 
-#ifndef WTFString_h
-#define WTFString_h
+#pragma once
 
 // This file would be called String.h, but that conflicts with <string.h>
 // on systems without case-sensitive file systems.
@@ -771,5 +770,3 @@ using WTF::reverseFind;
 using WTF::ASCIILiteral;
 
 #include <wtf/text/AtomicString.h>
-
-#endif
